--- a/references.bib
+++ b/references.bib
@@ -283,3 +283,11 @@
 	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1801-06126},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+
+@book{koehn2009statistical,
+	title={Statistical machine translation},
+	author={Koehn, Philipp},
+	year={2009},
+	publisher={Cambridge University Press}
+}
